Prevent progress bar percentage from being cut off (relevant for slow imports with small progress bar sizes). Add overall progress bar.

--- a/wagtail_image_import/static/wagtail_image_import/css/import.css
+++ b/wagtail_image_import/static/wagtail_image_import/css/import.css
@@ -17,3 +17,9 @@
     border-bottom: none;
     border-top: none;
 }
+
+
+.progress .bar {
+    white-space: nowrap;
+    overflow: visible;
+}
